--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
             <p style="text-align: justify;">We have a huge selection of games in different genres, so there’s something for everyone. Here are some types of games you can find on Classroom 6x:</p>
             <ul style="text-align: justify;">
                 <li><strong>Puzzle Games:</strong> Solve fun and challenging puzzles.</li>
-                <li><strong>Action Games:</strong> Fast-paced and exciting adventures.</li>
+                <li><strong><a href="https://classroom-6x-games.github.io/games/action-games" target="_blank">action</a><em>,Action Games:</strong> Fast-paced and exciting adventures.</li>
                 <li><strong>Adventure Games:</strong> Go on epic quests and explore new worlds.</li>
                 <li><strong>Educational Games:</strong> Learn while you play with math, science, and language games.</li>
             </ul>
