--- a/index.html
+++ b/index.html
@@ -1173,15 +1173,15 @@
             <h2 style="text-align: justify;">Features of Classroom 6x</h2>
             <p style="text-align: justify;">We have a huge selection of games in different genres, so there’s something for everyone. Here are some types of games you can find on Classroom 6x:</p>
             <ul style="text-align: justify;">
-                <li><strong>Puzzle Games:</strong> Solve fun and challenging puzzles.</li>
-                <li><strong><a href="https://classroom-6x-games.github.io/games/action-games" target="_blank">action</a><em>,Action Games:</strong> Fast-paced and exciting adventures.</li>
-                <li><strong>Adventure Games:</strong> Go on epic quests and explore new worlds.</li>
+                <li><strong><a href="https://classroom-6x-games.github.io/games/puzzle-games" target="_blank">Puzzle Games</a>,:</strong> Solve fun and challenging puzzles.</li>
+                <li><strong><a href="https://classroom-6x-games.github.io/games/action-games" target="_blank">Action Games</a><em>,:</strong> Fast-paced and exciting adventures.</li>
+                <li><strong><a href="https://classroom-6x-games.github.io/games/adventure-games">Adventure Games</a>,:</strong> Go on epic quests and explore new worlds.</li>
                 <li><strong>Educational Games:</strong> Learn while you play with math, science, and language games.</li>
             </ul>
             <h2 style="text-align: justify;">Unblocked Games</h2>
             <p style="text-align: justify;">All our games are unblocked, which means you can play them even if you're at school. We make sure our games work on school networks so you don't have to worry about being blocked.</p>
             <h2 style="text-align: justify;">How to Use Classroom 6x</h2>
-            <p style="text-align: justify;">It’s very easy to start playing on Classroom 6x. Here’s how:</p>
+            <p style="text-align: justify;">It’s very easy to start playing on <a href="https://classroom-6x-games.github.io/" target="_blank">Classroom 6x</a>, Classroom 6x. Here’s how:</p>
             <ul style="text-align: justify;">
                 <li><strong>Open Your Browser:</strong> Use your web browser on your computer, tablet, or smartphone.</li>
                 <li><strong>Visit Our Website:</strong> Type in the URL for Classroom 6x games and press enter.</li>
