--- a/among-us-io.html
+++ b/among-us-io.html
@@ -193,7 +193,7 @@
 
             <div class="col-lg">
                 <div>
-                    <iframe class="iframe-default" id="iframehtml5" title="Among Us.io" width="100%" height="600px" src="https://html5.gamemonetize.co/uxwe2obt5qsyi2uwpr3xi3d9lmfxjsmd/" frameborder="0" border="0" scrolling="no" allowfullscreen></iframe>
+                    <iframe class="iframe-default" id="iframehtml5" title="Among Us.io" width="100%" height="600px" src="https://t52504.github.io/g/among-us/" frameborder="0" border="0" scrolling="no" allowfullscreen></iframe>
                 </div>
                 <div class="px-lg-3">
                     <!-- share -->
