--- a/arkadiumx27s-bubble-shooter.html
+++ b/arkadiumx27s-bubble-shooter.html
@@ -193,7 +193,7 @@
 
             <div class="col-lg">
                 <div>
-                    <iframe class="iframe-default" id="iframehtml5" title="Arkadium's Bubble Shooter" width="100%" height="600px" src="https://games.crazygames.com/en_US/arkadium-s-bubble-shooter/index.html" frameborder="0" border="0" scrolling="no" allowfullscreen></iframe>
+                    <iframe class="iframe-default" id="iframehtml5" title="Arkadium's Bubble Shooter" width="100%" height="600px" src="https://cdn.bubbleshooter.net/games/bubble-shooter/" frameborder="0" border="0" scrolling="no" allowfullscreen></iframe>
                 </div>
                 <div class="px-lg-3">
                     <!-- share -->
