--- a/bubble-shooter.html
+++ b/bubble-shooter.html
@@ -14,7 +14,7 @@
 <meta name="description" content="Bubble Shooter is a great game for kids and adults. It’s easy to learn, fun to play, and it’s free! This amazing game is an awesome game with a really ...">
     <meta name="keywords" content="bubble shooter">
     <meta name="news_keywords" content="bubble shooter">
-<link rel="canonical" href="https://classroom6xgame.github.io/bubble-shooter">
+<link rel="canonical" href="https://classroom-6x-games.github.io/bubble-shooter">
 <link rel="icon" href="/upload/cache/upload/imgs/bubble-shooter-m60x60.png" />
 <link rel="apple-touch-icon" href="/upload/cache/upload/imgs/bubble-shooter-m60x60.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/upload/cache/upload/imgs/bubble-shooter-m57x57.png">
@@ -22,12 +22,12 @@
 <link rel="apple-touch-icon" sizes="114x114" href="/upload/cache/upload/imgs/bubble-shooter-m144x144.png">
 <meta property="og:title" content="Bubble Shooter - Play Bubble Shooter on Classroom 6x" itemprop="headline" />
 <meta property="og:type" content="website" />
-<meta property="og:url" itemprop="url" content="https://classroom6xgame.github.io/bubble-shooter" />
+<meta property="og:url" itemprop="url" content="https://classroom-6x-games.github.io/bubble-shooter" />
 <meta property="og:image" itemprop="thumbnailUrl" content="/upload/imgs/options/1001-games-logo.png" />
 <meta property="og:description" content="Bubble Shooter is a great game for kids and adults. It’s easy to learn, fun to play, and it’s free! This amazing game is an awesome game with a really ..." itemprop="description" />
 <meta property="og:site_name" content="Bubble Shooter - Play Bubble Shooter on Classroom 6x" />
 <meta name="twitter:title" content="Bubble Shooter - Play Bubble Shooter on Classroom 6x" />
-<meta name="twitter:url" content="https://classroom6xgame.github.io/bubble-shooter" />
+<meta name="twitter:url" content="https://classroom-6x-games.github.io/bubble-shooter" />
 <meta name="twitter:image" content="/upload/imgs/options/1001-games-logo.png" />
 <meta name="twitter:description" content="Bubble Shooter is a great game for kids and adults. It’s easy to learn, fun to play, and it’s free! This amazing game is an awesome game with a really ...">
 <meta name="twitter:card" content="summary" />    <link rel="stylesheet" href="/themes/classroom6x.io/rs/css/bootstrap.min.css">
@@ -193,7 +193,7 @@
 
             <div class="col-lg">
                 <div>
-                    <iframe class="iframe-default" id="iframehtml5" title="Bubble Shooter" width="100%" height="600px" src="https://games.crazygames.com/en_US/bubble-shooter-classic/index.html" frameborder="0" border="0" scrolling="no" allowfullscreen></iframe>
+                    <iframe class="iframe-default" id="iframehtml5" title="Bubble Shooter" width="100%" height="600px" src="https://cdn.bubbleshooter.net/games/bubble-shooter/" frameborder="0" border="0" scrolling="no" allowfullscreen></iframe>
                 </div>
                 <div class="px-lg-3">
                     <!-- share -->
